# Anjuta-Bug-Fixes

./: AUTHORS  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  anjuta.appdata.xml  anjuta.appdata.xml.in  anjuta.desktop  anjuta.desktop.in  anjuta.desktop.in.in  config.h  config.h.in  config.status  configure  configure.ac  gtester.mk  libtool  oldsearch-box.c
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am
libanjuta/: Makefile.am  anjuta-cell-renderer-diff.c  anjuta-cell-renderer-diff.h  anjuta-command-bar.c  anjuta-entry.c  anjuta-file-list.c  anjuta-glade.xml  anjuta-plugin-description.c  anjuta-plugin-handle.c  anjuta-plugin-handle.h  anjuta-plugin-manager.c  anjuta-plugin-manager.h  anjuta-profile-manager.c  anjuta-profile.c  anjuta-profile.h  anjuta-session.c  anjuta-utils.c  anjuta-utils.h
libanjuta/interfaces/: Makefile.am.gir  Makefile.am.iface  hierarchy.txt  ianjuta-buildable.c  ianjuta-buildable.h  ianjuta-builder.c  ianjuta-builder.h  ianjuta-debug-manager.c  ianjuta-debug-manager.h  ianjuta-debugger-breakpoint.c  ianjuta-debugger-breakpoint.h  ianjuta-debugger-instruction.c  ianjuta-debugger-instruction.h  (+124 more)
pixmaps/: Makefile.am
pixmaps/HighContrast/: Makefile  Makefile.in
pixmaps/HighContrast/16x16/: Makefile.am
pixmaps/HighContrast/22x22/: Makefile.am
pixmaps/HighContrast/24x24/: Makefile.am
pixmaps/HighContrast/256x256/: Makefile.am
pixmaps/HighContrast/32x32/: Makefile.am
pixmaps/HighContrast/48x48/: Makefile.am
pixmaps/hicolor/: Makefile  Makefile.in
(+13 files in other folders)
